--- a/src/assets/css/components/mixin/UxToggleGroup.css
+++ b/src/assets/css/components/mixin/UxToggleGroup.css
@@ -1,8 +1,46 @@
 /* UxToggle */
-.ux-toggle-group {}
+.ux-toggle-group {
+	width: 100%;
+	background-image: repeating-linear-gradient(to top, var(--light0), var(--light0) 3.6rem, var(--light1) 3.6rem, var(--light1) 3.7rem);
+}
 .ux-toggle-group .ux-toggle-group-base {
 	display: flex;
+	flex-wrap: wrap;
+	gap: .1rem 0;
+	width: 100%;
 	border-radius: 1rem;
 	box-shadow: inset 0 0 0 .1rem var(--light2);
-	background-color: var(--light0);
+}
+.ux-toggle-group .ux-toggle-group-base > *:not(:first-of-type):not(.fill)::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 0;
+	width: .1rem;
+	height: 50%;
+	background-color: var(--light1);
+	transform: translateY(-50%);
+}
+.ux-toggle-group .ux-toggle-group-base > * {
+	flex-grow: 1;
+	flex-shrink: 0;
+	flex-basis: 0;
+}
+.ux-toggle-group[class*=col] .ux-toggle-group-base > * {
+	flex-grow: 0;
+	position: relative;
+}
+.ux-toggle-group.col2 .ux-toggle-group-base > * {
+	flex-basis: calc(100% / 2);
+}
+.ux-toggle-group.col3 .ux-toggle-group-base > * {
+	flex-basis: calc(100% / 3);
+}
+.ux-toggle-group.col4 .ux-toggle-group-base > * {
+	flex-basis: calc(100% / 4);
+}
+.ux-toggle-group.col2 .ux-toggle-group-base > *:nth-child(2n + 1)::before,
+.ux-toggle-group.col3 .ux-toggle-group-base > *:nth-child(3n + 1)::before,
+.ux-toggle-group.col4 .ux-toggle-group-base > *:nth-child(4n + 1)::before {
+	display: none;
 }
