--- a/src/assets/css/components/mixin/UxCalendar.css
+++ b/src/assets/css/components/mixin/UxCalendar.css
@@ -25,7 +25,7 @@
 }
 .ux-calendar .ux-calendar-date > :nth-child(7n),
 .ux-calendar .ux-calendar-date > :nth-child(7n + 1) {
-	color: var(--invalid);
+	color: var(--color1);
 }
 .ux-calendar .ux-calendar-date .ux-calendar-week {
 	display: flex;
@@ -52,7 +52,7 @@
 }
 .ux-calendar .ux-calendar-date > :nth-child(7n) .ux-button-label,
 .ux-calendar .ux-calendar-date > :nth-child(7n + 1) .ux-button-label {
-	color: var(--invalid);
+	color: var(--color1);
 }
 .ux-calendar .ux-calendar-date .ux-calendar-button.isToday .ux-button-label {
 	box-shadow: inset 0 0 0 .1rem var(--light3);
