--- a/src/assets/css/components/base/UxFile.css
+++ b/src/assets/css/components/base/UxFile.css
@@ -2,27 +2,9 @@
 .ux-file {
 	display: flex;
 	align-items: center;
-	gap: .8rem;
-	padding: 0 1.2rem;
-	height: 4rem;
-	border-radius: .8rem;
-	box-shadow: inset 0 0 0 .1rem var(--light2);
-	background-color: var(--light0);
-	transition: box-shadow .1s ease-in-out;
 }
 .ux-file .ux-file-base {
-	display: flex;
-	align-items: center;
 	position: relative;
-	flex-grow: 1;
-	flex-shrink: 0;
-	flex-basis: 0;
-	width: 100%;
-	border: 0;
-}
-.ux-file .ux-file-base:focus,
-.ux-file .ux-file-base:focus-visible {
-	outline: none;
 }
 .ux-file .ux-file-input {
 	overflow: hidden;
@@ -33,21 +15,47 @@
 	width: 0;
 	height: 0;
 }
-.ux-file .ux-file-label {
+.ux-file:not(.default) .ux-button {
+	flex-grow: 1;
+}
+/* UxFile Default */
+.ux-file.default {
+	gap: .8rem;
+	padding: 0 1.2rem;
+	height: 4rem;
+	border-radius: .8rem;
+	box-shadow: inset 0 0 0 .1rem var(--light2);
+	background-color: var(--light0);
+	transition: box-shadow .1s ease-in-out;
+}
+.ux-file.default .ux-file-base {
+	display: flex;
+	align-items: center;
+	flex-grow: 1;
+	flex-shrink: 0;
+	flex-basis: 0;
+	width: 100%;
+	border: 0;
+}
+.ux-file.default .ux-file-base:focus,
+.ux-file.default .ux-file-base:focus-visible {
+	outline: none;
+}
+.ux-file.default .ux-file-label {
 	color: var(--light3);
 }
-.ux-file .ux-file-label.path {
+.ux-file.default .ux-file-label.path {
 	color: var(--dark0);
 }
-/* UxFile Focus */
-.ux-file:focus-within {
+/* UxFile Default Focus */
+.ux-file.default:focus-within {
 	box-shadow: inset 0 0 0 .2rem var(--light3);
 }
-/* UxButton in UxFile */
-.ux-file .ux-button.ux-file-button {
+/* UxButton in UxFile Default */
+.ux-file.default .ux-button.ux-file-button {
 	height: 2.4rem;
 }
-.ux-file .ux-button.ux-file-button .ux-button-base {
+.ux-file.default .ux-button.ux-file-button .ux-button-base {
 	flex-shrink: 0;
 	padding: 0 0.8rem;
 	min-height: initial;
@@ -56,7 +64,7 @@
 	font-size: 1.4rem;
 	box-shadow: none;
 }
-.ux-file .ux-button-base:hover,
-.ux-file .ux-button-base:focus {
+.ux-file.default .ux-button-base:hover,
+.ux-file.default .ux-button-base:focus {
 	box-shadow: none;
 }
