--- a/src/assets/css/components/mixin/UxDatepicker.css
+++ b/src/assets/css/components/mixin/UxDatepicker.css
@@ -1,2 +1,7 @@
-/* UxDatepicker */
+/* UxDatePicker */
 .ux-datepicker {}
+.ux-datepicker-container {}
+.ux-datepicker-header {}
+.ux-datepicker-main {
+	padding-top: 0;
+}
