--- a/src/assets/css/components/mixin/UxThumb.css
+++ b/src/assets/css/components/mixin/UxThumb.css
@@ -1,2 +1,27 @@
 /* UxThumb */
-.ux-thumb {}
+.ux-thumb {
+	position: relative;
+	padding: .1rem;
+}
+.ux-thumb[role=presentation] {
+	cursor: pointer;
+}
+.ux-thumb .ux-image-base {
+	width: 100%;
+	height: 100%;
+	border-radius: 1.2rem;
+	box-shadow: 0 0 0 .1rem var(--light2);
+	filter: drop-shadow(0 0.1rem 0.5rem var(--light1));
+	-webkit-filter: drop-shadow(0 0.1rem 0.5rem var(--light1));
+	object-fit: cover;
+}
+.ux-thumb .ux-image-caption {
+	text-align: center;
+}
+.ux-thumb [class*=ux-icon] {
+	position: absolute;
+	top: .8rem;
+	right: .8rem;
+	border-radius: 50%;
+	border: .1rem solid var(--light0);
+}
