--- a/src/assets/css/components/mixin/UxTimeline.css
+++ b/src/assets/css/components/mixin/UxTimeline.css
@@ -5,7 +5,7 @@
 .ux-timeline-base {
 	display: flex;
 	flex-direction: column;
-	gap: .8rem;
+	gap: 1.6rem;
 	position: relative;
 }
 .ux-timeline-base::before {
@@ -76,6 +76,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-top: 0;
 	width: 2.4rem;
 	height: 2.4rem;
 	font-weight: 700;
@@ -84,7 +85,6 @@
 	color: var(--light0);
 }
 .ux-timeline.number .ux-timeline-content {}
-
 /* UxTimeline z-index */
 .ux-timeline-base::before {
 	z-index: 1;
