--- a/src/assets/css/components/layout/UxContent.css
+++ b/src/assets/css/components/layout/UxContent.css
@@ -1,7 +1,8 @@
 /* UxContent */
-.ux-content {}
-.ux-main .ux-section:not(.ux-dock) .ux-content {
+.ux-content {
 	display: flex;
 	flex-direction: column;
+}
+.ux-main > .ux-section:not(.ux-dock) > .ux-article > .ux-content {
 	padding: 2.4rem 0 8rem;
 }
