--- a/src/assets/css/components/base/UxBadge.css
+++ b/src/assets/css/components/base/UxBadge.css
@@ -6,7 +6,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: .2rem .6rem 0 .4rem;
+	padding: 0 .6rem;
 	min-width: 2rem;
 	height: 2rem;
 	border-radius: 1rem;
