--- a/src/assets/css/components/base/UxDivider.css
+++ b/src/assets/css/components/base/UxDivider.css
@@ -1,19 +1,17 @@
 /* UxDivider */
 .ux-divider {
 	display: block;
-	margin: 0;
-	border: 0;
 	background-color: var(--light1);
 }
-.ux-divider.sm {
-	height: .4rem;
-}
-.ux-divider.md {
-	height: .8rem;
-}
-.ux-divider.lg {
-	height: 1.6rem;
-}
+/* UxDivider Size */
+.ux-divider.xxs {height: .4rem;}
+.ux-divider.xs {height: .8rem;}
+.ux-divider.sm {height: 1.2rem;}
+.ux-divider.md {height: 1.6rem;}
+.ux-divider.lg {height: 2rem;}
+.ux-divider.xl {height: 2.4rem;}
+.ux-divider.xxl {height: 2.8rem;}
+/* UxDivider Dash */
 .ux-divider.dash {
 	height: .1rem;
 	background-image: repeating-linear-gradient(to right, var(--light3), var(--light3) .1rem, var(--light0) .1rem, var(--light0) .4rem);
