--- a/src/assets/css/components/mixin/UxMasking.css
+++ b/src/assets/css/components/mixin/UxMasking.css
@@ -22,10 +22,10 @@
 .ux-masking .ux-masking-input {
 	position: absolute;
 	top: 0;
-	right: 0;
-	bottom: 0;
 	left: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
 	border: 0;
 	background-color: transparent;
 	color: transparent;
