--- a/src/assets/css/components/mixin/UxTable.css
+++ b/src/assets/css/components/mixin/UxTable.css
@@ -8,7 +8,8 @@
 	background-color: var(--light0);
 }
 .ux-table .ux-table-base {
-	margin: -1px;
+	margin-left: -1px;
+	margin-bottom: -1px;
 	width: initial;
 }
 .ux-table th {
@@ -18,7 +19,8 @@
 .ux-table th,
 .ux-table td {
 	padding: .8rem 1.2rem;
-	border: .1rem solid var(--light2);
+	border-bottom: .1rem solid var(--light2);
+	border-left: .1rem solid var(--light2);
 }
 /* UxTable Align */
 .ux-table.left th,
@@ -44,4 +46,14 @@
 .ux-table th.center,
 .ux-table td.center {
 	text-align: center;
+}
+/* UxTable Scroll X */
+.ux-table.scroll {
+	overflow-x: scroll;
+}
+.ux-table.scroll .ux-table-base {
+	table-layout: fixed;
+}
+.ux-container.mobile .ux-table.scroll {
+	width: calc(100vw - var(--space) * 2);
 }
